@@ -14,13 +14,7 @@
 - Vite to reduce React bloatware
 - Customizable databases using MariaDB & MySQL
 
-## Notes
-
-- This read me isn't where the main project file is stored. It's in [react-is](/react-is/).
-- This directory is more of a container for different iterations of the project.
-- You can disregard the PHP files from the root directory for now.
-
-## License [License](LICENSE)
+## [License](LICENSE)
 
 Shield: [![CC BY-NC-SA 4.0][cc-by-nc-sa-shield]][cc-by-nc-sa]
 
@@ -32,3 +26,9 @@ This work is licensed under a
 [cc-by-nc-sa]: http://creativecommons.org/licenses/by-nc-sa/4.0/
 [cc-by-nc-sa-image]: https://licensebuttons.net/l/by-nc-sa/4.0/88x31.png
 [cc-by-nc-sa-shield]: https://img.shields.io/badge/License-CC%20BY--NC--SA%204.0-lightgrey.svg
+
+## Notes
+
+- This read me isn't where the main project file is stored. It's in [react-is](/react-is/).
+- This directory is more of a container for different iterations/resources of the project.
+- You can disregard the PHP files from the root directory for now.
