@@ -1,9 +1,0 @@
-import React from 'react'
-
-function PageWIP() {
-  return (
-    <div>Page is currently in development. <br/>Please come back soon.</div>
-  )
-}
-
-export default PageWIP
